# nufast

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml  zig.yml
benches/: example.rs  oscillation.rs
benchmarks/: README.md
benchmarks/cpp/: benchmark.cpp
benchmarks/fortran/: benchmark.f90
benchmarks/python/: benchmark.py  debug_probs.py  generate_reference.py
benchmarks/rust/: oscillation.rs
benchmarks/zig/: .gitignore  README.md  WASM.md  build.zig  build.zig.zon
benchmarks/zig/src/: benchmark.zig  benchmark_simd.zig  c_exports.zig  nsi.zig  nufast.zig  sterile.zig  wasm_exports.zig
benchmarks/zig/wasm/: README.md  nufast-simd.wasm  nufast.d.ts  nufast.js  nufast.ts  nufast.wasm  package.json  test-ts.ts  test.html  test.js
bindings/python/: README.md  nufast.py  test_nufast.py
paper/: nufast-benchmark.typ  refs.bib
src/: lib.rs  main.rs
