[package]
name = "nufast"
version = "0.4.0"
edition = "2021"
authors = ["Baalateja Kataru <baalateja.k@gmail.com>"]
description = "Fast and accurate three-flavor neutrino oscillation probabilities in vacuum and matter"
license = "MIT"
repository = "https://github.com/planckeon/nufast"
documentation = "https://docs.rs/nufast"
readme = "README.md"
keywords = ["neutrino", "oscillation", "physics", "particle-physics", "msw"]
categories = ["science", "simulation"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "oscillation"
harness = false

[features]
default = []
# Enable this for no_std support (no allocation)
no_std = []
